--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Mate&family=Zilla+Slab:wght@700&display=swap");
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.font-zilla-slab {
+  font-family: "Zilla Slab", serif;
 }
 
 @layer utilities {
